--- a/src/index.css
+++ b/src/index.css
@@ -67,19 +67,29 @@ body {
   min-height: 100vh;
 }
 
-h1 {
-  font-size: 3.2em;
-  line-height: 1.1;
-}
 
 button {
-  border-radius: 8px;
-  padding: 0.6em 1.2em;
+  padding: 1em 2.5em;
   font-size: 1em;
   font-weight: 500;
-  font-family: inherit;
   cursor: pointer;
   transition: border-color 0.25s;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  box-sizing: border-box;
+  appearance: none;
+  text-decoration: none;
+  overflow-wrap: break-word;
+  hyphens: auto;
+  border: 2px solid rgb(1, 2, 5);
+  border-radius: 4px;
+  background-color: rgb(1, 2, 5);
+  color: rgb(251, 252, 255);
+  max-height: unset;
+  height: auto;
+  width: auto;
+  min-width: min-content;
 }
 button:hover {
   border-color: #646cff;
