--- a/src/scss/custom.css
+++ b/src/scss/custom.css
@@ -1,3 +1,7 @@
+.product-detail-wrapper .main-product-info-wrapper .buttons-wrapper {
+  display: flex;
+  justify-content: center;
+}
 .product-detail-wrapper .main-image-wrapper {
   max-width: 1920px;
   margin-left: auto;
@@ -9,11 +13,9 @@
   display: flex;
   flex-direction: row;
   justify-content: center;
-  gap: 8px;
 }
-.product-detail-wrapper .buttons-wrapper {
-  display: flex;
-  justify-content: center;
+.product-detail-wrapper .price-wrapper .price-val {
+  margin-left: 8px;
 }
 
 /*# sourceMappingURL=custom.css.map */
