--- a/src/scss/custom.scss
+++ b/src/scss/custom.scss
@@ -1,6 +1,9 @@
 .product-detail-wrapper{
   .main-product-info-wrapper{
-
+    .buttons-wrapper{
+      display: flex;
+      justify-content: center;
+    }
   }
   .main-image-wrapper{
     max-width: 1920px;
@@ -13,10 +16,9 @@
     display: flex;
     flex-direction: row;
     justify-content: center;
-    gap: 8px;
+    .price-val{
+      margin-left: 8px;
+    }
   }
-  .buttons-wrapper{
-    display: flex;
-    justify-content: center;
-  }
+
 }
